--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -176,6 +176,29 @@
 <br />
 
 
+<h4>2024</h4>
+<!-- semantic web - B-->
+    <a href="" target="_blank">EMNLP</a>
+    |   
+    <a href="" target="_blank">ISWC</a>
+    |
+    <a href="https://2024.ecmlpkdd.org/" target="_blank">ECML-PKDD</a>
+    |
+    <a href="" target="_blank">ICME</a>
+    |
+    <a href="" target="_blank">ICMR</a>
+    |
+    <a href="" target="_blank">IJCNN</a>
+    |
+    <a href="" target="_blank">PAKDD</a>
+    |
+    <a href="" target="_blank">ECIR</a>
+    |
+    <a href="" target="_blank">UIC</a>
+    |
+    <br/>
+
+
 <h4>2023</h4>
     <a href="https://infocom2023.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
     |
@@ -261,6 +284,9 @@
     |
 <!-- Bioinformatics and Biomedicine - B-->
     <a href="https://bidma.cpsc.ucalgary.ca/IEEE-BIBM-2023/" target="_blank">BIBM (<a href="#" target="_blank">Download</a>)</a>
+    |
+<!-- Acoustics, Speech and Signal Processing - B-->
+    <a href="https://2024.ieeeicassp.org/" target="_blank">ICASSP</a>
     |
 <!-- bigdata - C-->  
     <a href="http://bigdataieee.org/BigData2023/index.html" target="_blank">IEEE BigData (<a href="#" target="_blank">Download</a>)</a>
@@ -772,8 +798,37 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/EW8SeeLXOi66ovs4IpGXNA" target="_blank">Stealing Large Language Models: 关于对ChatGPT进行模型窃取的一些工作</a>
     |
   <!-- 3.29 -->
-    <a href="https://mp.weixin.qq.com/s/RWiO90srfx7O6dlbGZaHVQ" target="_blank">众说纷xxx</a>
-    |                           
+    <a href="https://mp.weixin.qq.com/s/RYMvLGOxcRQ5Q9IennUTTA" target="_blank">立即停止训练比 GPT-4 更强的模型，至少六个月！马斯克、图灵奖得主等数千 AI 专家紧急呼吁</a>
+    |
+  <!-- 3.30 -->
+    <a href="https://view.inews.qq.com/a/20230330A0593700?uid=&chlid=news_news_top&c_buffer=aid%3D20230330A0593700%3Bappver%3D7.0.90%3Bts%3D1680182708172&sign=AAw3UL2kTawXz10w%2FoCV6EYmFljnAx6e06D20slD8L%2BXuR4IrM5Jw2GGnjBi2BlYNT1FxXUPUA9J3HUjw%2BOgBK%2BZQb3HwTy%2BG%2F6Z58YAVRWbNl4gvQr1ZDOmnAmUaoIOoS1%3D&shareto=&openid=o04IBAMltO2DOJsG-e9YmpA7Mz2k&key=&version=2800227f&devicetype=android-33&wuid=oDdoCt9x3Wfk2shbE9W_nmP1WlAk&sharer=o04IBAMltO2DOJsG-e9YmpA7Mz2k&openwith=wxmessage" target="_blank">哈工大计算学部长聘教授车万翔：ChatGPT浅析</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/hLsQvD-kPHXoUpkLTwMN1g" target="_blank">暂停GPT-5研发呼吁引激战！吴恩达、LeCun带头反对，Bengio站队支持</a>
+    | 
+    <a href="https://www.toutiao.com/article/7216258149358060084/?app=news_article&timestamp=1680178755&use_new_style=1&req_id=20230330201914C5B1349B53039B148C6F&group_id=7216258149358060084&wxshare_count=1&tt_from=weixin&utm_source=weixin&utm_medium=toutiao_android&utm_campaign=client_share&share_token=4984f225-bd00-4057-9c78-0336cef9188a&source=m_redirect&wid=1680187293538" target="_blank">学术专用版ChatGPT火了，一键完成论文润色、代码解释、报告生成</a>
+    |
+  <!-- 3.31 -->
+    <a href="https://mp.weixin.qq.com/s/miML4PXioK5iM8UI0cTSCQ" target="_blank">【官方教程】ChatGLM-6B微调，最低只需7GB显存</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/cWWxyrNCB2fuS3Orw7W8rg" target="_blank">论文导读 | 大语言模型上的精调策略</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/otdenJh5FJsCgi5ONy9JIQ" target="_blank">“ChatGPT们”的淘金时代</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/_Z9XKi7jfjkr6oEs4pGgmg" target="_blank">GPT 模型成功的背后用到了哪些以数据为中心的人工智能（Data-centric AI）技术？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/GMMjF9sDv0c31AoRTXSIYA" target="_blank">浅评ChatGPT在软件开发上的辅助能力（附GPT-4对比）</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/hU9RbUyJYHD_FLfB7FKXXw" target="_blank">媒体发声丨肖仰华教授解读暂停巨型AI实验联名公开信</a>
+    |
+  <!-- 4.1 -->
+    <a href="https://mp.weixin.qq.com/s/z9JOiRHEv1FEkg0BWSw2oA" target="_blank">精彩活动丨“通用人工智能时代的科学研究——机遇与挑战”研讨会顺利召开</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/z9JOiRHEv1FEkg0BWSw2oA" target="_blank">ChatGPTScan:使用ChatGPTScan批量进行代码审计</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/ntXWK0qlf_FFQjj-enVZ5g" target="_blank">看不见的挑战：探寻GPT-4的能力极限，突破还是止步于此？</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/jiHckwuLwFpnBAVAn_4iVg" target="_blank">限时免费使用ChatGPT，让科研更高效！</a>
+    |                                    
 </br>
 </br>
 AI论文: 
