--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -261,7 +261,7 @@
     <a href="https://iwqos2023.ieee-iwqos.org/" target="_blank">IWQoS</a>
     |
 <!-- semantic web - B-->
-    <a href="" target="_blank">EMNLP</a>
+    <a href="https://2023.emnlp.org/" target="_blank">EMNLP</a>
     |   
     <a href="https://iswc2023.semanticweb.org/" target="_blank">ISWC</a>
     |
@@ -444,6 +444,18 @@ Graph Representation:
 懂理性的AI Models: 
 </br>    
     <a href="https://mp.weixin.qq.com/s/S77fj9loSKFhHcAiWgxKrg" target="_blank">2023将至，Bengio等大佬年度展望！懂理性的AI模型要来了？</a>
+    |
+</br>
+</br>
+“神经” + “符号” Models: 
+</br>    
+    <a href="https://mp.weixin.qq.com/s/tzaN8sCN05UeTmRVNxVLrQ" target="_blank">重新审视AI，神经网络中概念符号涌现的发现与证明</a>
+    |
+</br>
+</br>
+通用AI Models: 
+</br>    
+    <a href="https://mp.weixin.qq.com/s/dLSmmhOvjZ8MNnz8AtHleQ" target="_blank">一家之言丨像天使也似魔鬼：关于通用人工智能时代科学研究的71个问题</a>
     |
 </br>
 </br>
@@ -828,7 +840,37 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/ntXWK0qlf_FFQjj-enVZ5g" target="_blank">看不见的挑战：探寻GPT-4的能力极限，突破还是止步于此？</a>
     | 
     <a href="https://mp.weixin.qq.com/s/jiHckwuLwFpnBAVAn_4iVg" target="_blank">限时免费使用ChatGPT，让科研更高效！</a>
-    |                                    
+    |
+    <a href="https://mp.weixin.qq.com/s/VMg9bXZrL1noNjeyHzfUcQ" target="_blank">技术动态 | 基于GPT-4的知识图谱构建能力评测</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/iM7el66k7yrl-ZUKCpwz2g" target="_blank">ChatGPT在意大利被禁，OpenAI被限20天内补救</a>
+    | 
+  <!-- 4.2 -->
+    <a href="https://mp.weixin.qq.com/s/kFFPORQOz6VP9F6rZHokyw" target="_blank">中国人民大学卢志武：ChatGPT对多模态通用生成模型的重要启发</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/LCGQyNA6sHcdfIIARSNlww" target="_blank">3090单卡5小时，每个人都能训练专属ChatGPT，港科大开源LMFlow</a>
+    | 
+  <!-- 4.3 -->
+    <a href="https://mp.weixin.qq.com/s/A_SZzbyHTu22004YJmUZWA" target="_blank">智能化时代的软件工程：拥抱大模型的正确姿势</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/b6icSbY2OA7BAVbuR8DhCw" target="_blank">ChatGPT哲学之谜</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/zXVI7sHkcR7pHZ7jzqXiiw" target="_blank">SETalk精彩回顾：ChatGPT对软件工程的新机遇上篇（文末有完整视频回看）</a>
+    |  
+  <!-- 4.4 -->
+    <a href="https://mp.weixin.qq.com/s/6ZQ3MiaQFOuOUHXXU-pv6w" target="_blank">ChatGPT 类大语言模型为什么会带来“神奇”的涌现能力？</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/nTtLFeV-LumdqMj5CKirdQ" target="_blank">阿里版ChatGPT就快来了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/2z0LkyC28-Mny5GMeNjXGg" target="_blank">ChatGPT赋能工作岗位预测，让你从容面对职业转型与升级！</a>
+    |
+  <!-- 4.5 -->
+    <a href="https://mp.weixin.qq.com/s/9XL1RgcYrC7XAkdZo8FBnw" target="_blank">非常全面：72页ChatGPT研究框架(2023)ppt（附下载）</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/tzaN8sCN05UeTmRVNxVLrQ" target="_blank">重新审视AI，神经网络中概念符号涌现的发现与证明</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/uEAlKdpzutOpnPGmg5dOjw" target="_blank">谷歌TPU超算，大模型性能超英伟达，已部署数十台：图灵奖得主新作</a>
+    |                                      
 </br>
 </br>
 AI论文: 
@@ -1844,7 +1886,9 @@ AI Big Model:
     <a href="https://mp.weixin.qq.com/s/QmP9EJmvbVZ0YN3EMT0eJQ" target="_blank">S级秘术！指导ChatGPT训练一个神经网络的超详细「指令」来啦！</a>
     |
     <a href="https://mp.weixin.qq.com/s?__biz=MzIwNzc2NTk0NQ==&mid=2247545200&idx=2&sn=841715268d0613e305278e8b0d22eb3e&chksm=970f19a6a07890b072de9fa9407d188c9b80b18ef754c87ab60345ed0ac8e6ae4b1a99582993&scene=126&sessionid=1678957154&subscene=227&key=5099f4dd3766303d4613a285f14c61afbf7628466bb0da35da9aef257d8a46527b855d2f1f6d0248f201b023f2e944818e592b7a8b710f0fb4987476d2eb133c297481d317210d0da18143054e8154398495e0334528d9cb272d4abdce5082eadebc21662226c85669579c3015bb1fb1376fe7cb1cbf52c3e87b4eb047968bf4&ascene=0&uin=NjI1MjE3OTQy&devicetype=Windows+10+x64&version=6309001c&lang=zh_CN&countrycode=CN&exportkey=n_ChQIAhIQwPk%2BHDb22Sdd7j0Khzo%2B9xLbAQIE97dBBAEAAAAAAKaGLk0s3SgAAAAOpnltbLcz9gKNyK89dVj0Ca7muIpPdbBDQJ0VoOUYXqR87P%2FP%2FkuC467GBdDTrZjiraPHFsnjbUSqRvPdrvYu%2BUg9JrJlfTJEYX0ZrOfidxDiRmvfk0RMx5FqWpZizOE0WMPTpcCwMB1EOHG3dQcqq%2B2TrAJ2nHBNMfzef%2Bq8NQk5klrnxeIRpaBFWk8ZdLbJ2JbkX37NaFKOz3RSl75XtB5a1gp97BNyb1aVRssaaCCEg2TG2J4%2F%2FhwFhn9Uq8d09zWptQ%3D%3D&acctmode=0&pass_ticket=%2B4sMkpWSdgE7DVxPfLwwdiC0NJyLzer%2BjQUSarkDhq8DLddF4%2F7IPJTOPz%2FUp9CkSGFzWiTvvHAnvwOzvKRt%2Bg%3D%3D&wx_header=1&fontgear=2" target="_blank">惊呼！在Mac上可以跑LLaMA啦！附上详细教程</a>
-    |                         
+    | 
+    <a href="https://mp.weixin.qq.com/s/LCGQyNA6sHcdfIIARSNlww" target="_blank">3090单卡5小时，每个人都能训练专属ChatGPT，港科大开源LMFlow</a>
+    |                        
 <!--   <br /> -->
 
 <br />
