--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -870,6 +870,20 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/tzaN8sCN05UeTmRVNxVLrQ" target="_blank">重新审视AI，神经网络中概念符号涌现的发现与证明</a>
     |
     <a href="https://mp.weixin.qq.com/s/uEAlKdpzutOpnPGmg5dOjw" target="_blank">谷歌TPU超算，大模型性能超英伟达，已部署数十台：图灵奖得主新作</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/RUj7HZN96Dy9oRAMy8nmAA" target="_blank">Open AI创始人Sam Altman：关于ChatGPT系统设计背后的18个关键思考</a>
+    | 
+  <!-- 4.6 -->
+    <a href="https://mp.weixin.qq.com/s/123NDy4rVlWFZ4wbmgUbhQ" target="_blank">从集异壁理解ChatGPT的成功与局限</a>
+    | 
+  <!-- 4.7 -->
+    <a href="https://mp.weixin.qq.com/s/ntHjW-aGYVmyabSepb-vvg" target="_blank">ChatGPT平替「小羊驼」Mac可跑！2行代码单GPU，UC伯克利再发70亿参数开源模型</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/xxkx0NbtUYOPkr0bZAkl3g" target="_blank">CV不存在了？Meta发布CV届的GPT模型「SAM」，可以分割一切</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/4eULt6oPjUl4Srt3yjqLzg" target="_blank">CV开启大模型时代！谷歌发布220亿参数史上最大ViT，视觉感知力直逼人类</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/bpwyT0LO8um-7h18yFZv-A" target="_blank">上海人工智能实验室发布「风乌」大模型，全球气象有效预报时间首破10天</a>
     |                                      
 </br>
 </br>
