--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -459,6 +459,12 @@ Graph Representation:
     |
 </br>
 </br>
+Big Models: 
+</br>    
+    <a href="https://mp.weixin.qq.com/s/GcgePhzh_E7XaDkq5ThjDQ" target="_blank">推特炸锅啦！「是否暂停巨型AI实验？」LeCun、吴恩达带头反对</a>
+    |
+</br>
+</br>
 ChatGPT: 
 </br> 
     <a href="https://mp.weixin.qq.com/s/Mf4MBpN761M8yI79aaRPeA" target="_blank">ChatGPT保姆级注册教程</a>
@@ -809,8 +815,18 @@ ChatGPT:
     | 
     <a href="https://mp.weixin.qq.com/s/EW8SeeLXOi66ovs4IpGXNA" target="_blank">Stealing Large Language Models: 关于对ChatGPT进行模型窃取的一些工作</a>
     |
+    <a href="https://mp.weixin.qq.com/s/0OA7E0o89iqn_k4PVqPD0g" target="_blank">LeCun最新演讲，痛批GPT类模型没前途，称“世界模型”是正途！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ne07WkMjjoMovY3qkiUUTg" target="_blank">MIT新方法让GPT-4学会反思，写代码能力提升21%！</a>
+    |
   <!-- 3.29 -->
     <a href="https://mp.weixin.qq.com/s/RYMvLGOxcRQ5Q9IennUTTA" target="_blank">立即停止训练比 GPT-4 更强的模型，至少六个月！马斯克、图灵奖得主等数千 AI 专家紧急呼吁</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/JX7tfLjJ-ZFqaoc98LYByA" target="_blank">千名大佬发联名信，叫停GPT-5超强大模型！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/ruzkyvY9XeGqjcjaai8EkA" target="_blank">北大“韦神”出了道数学题，有老师用ChatGPT做答，结果出乎意料</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/rb6bkTd1U6UqPwp8St3Low" target="_blank">GPT-4救了我狗的命</a>
     |
   <!-- 3.30 -->
     <a href="https://view.inews.qq.com/a/20230330A0593700?uid=&chlid=news_news_top&c_buffer=aid%3D20230330A0593700%3Bappver%3D7.0.90%3Bts%3D1680182708172&sign=AAw3UL2kTawXz10w%2FoCV6EYmFljnAx6e06D20slD8L%2BXuR4IrM5Jw2GGnjBi2BlYNT1FxXUPUA9J3HUjw%2BOgBK%2BZQb3HwTy%2BG%2F6Z58YAVRWbNl4gvQr1ZDOmnAmUaoIOoS1%3D&shareto=&openid=o04IBAMltO2DOJsG-e9YmpA7Mz2k&key=&version=2800227f&devicetype=android-33&wuid=oDdoCt9x3Wfk2shbE9W_nmP1WlAk&sharer=o04IBAMltO2DOJsG-e9YmpA7Mz2k&openwith=wxmessage" target="_blank">哈工大计算学部长聘教授车万翔：ChatGPT浅析</a>
@@ -818,6 +834,10 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/hLsQvD-kPHXoUpkLTwMN1g" target="_blank">暂停GPT-5研发呼吁引激战！吴恩达、LeCun带头反对，Bengio站队支持</a>
     | 
     <a href="https://www.toutiao.com/article/7216258149358060084/?app=news_article&timestamp=1680178755&use_new_style=1&req_id=20230330201914C5B1349B53039B148C6F&group_id=7216258149358060084&wxshare_count=1&tt_from=weixin&utm_source=weixin&utm_medium=toutiao_android&utm_campaign=client_share&share_token=4984f225-bd00-4057-9c78-0336cef9188a&source=m_redirect&wid=1680187293538" target="_blank">学术专用版ChatGPT火了，一键完成论文润色、代码解释、报告生成</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/jPMC80kwl6SWgi9om45Iig" target="_blank">OpenAI全新插件系统：代码解释器！又一款宝藏插件诞生！训模型、迷宫游戏、二维码生成</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/PtCREHS-JPQNDazQMyoGOQ" target="_blank">ChatGPT消灭全球3亿打工人！高盛重磅预测：25%岗位将被AI取代</a>
     |
   <!-- 3.31 -->
     <a href="https://mp.weixin.qq.com/s/miML4PXioK5iM8UI0cTSCQ" target="_blank">【官方教程】ChatGLM-6B微调，最低只需7GB显存</a>
@@ -831,6 +851,10 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/GMMjF9sDv0c31AoRTXSIYA" target="_blank">浅评ChatGPT在软件开发上的辅助能力（附GPT-4对比）</a>
     |
     <a href="https://mp.weixin.qq.com/s/hU9RbUyJYHD_FLfB7FKXXw" target="_blank">媒体发声丨肖仰华教授解读暂停巨型AI实验联名公开信</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/fIXIBUQB5BOuQf2i5RES-w" target="_blank">如果ChatGPT有1%的风险伤害你，你还会用它吗？超级智能值得恐惧吗</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/GcgePhzh_E7XaDkq5ThjDQ" target="_blank">推特炸锅啦！「是否暂停巨型AI实验？」LeCun、吴恩达带头反对</a>
     |
   <!-- 4.1 -->
     <a href="https://mp.weixin.qq.com/s/z9JOiRHEv1FEkg0BWSw2oA" target="_blank">精彩活动丨“通用人工智能时代的科学研究——机遇与挑战”研讨会顺利召开</a>
@@ -856,13 +880,19 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/b6icSbY2OA7BAVbuR8DhCw" target="_blank">ChatGPT哲学之谜</a>
     |
     <a href="https://mp.weixin.qq.com/s/zXVI7sHkcR7pHZ7jzqXiiw" target="_blank">SETalk精彩回顾：ChatGPT对软件工程的新机遇上篇（文末有完整视频回看）</a>
-    |  
+    | 
+    <a href="https://mp.weixin.qq.com/s/cmscJ6WHZKoiaUL4U5xvSA" target="_blank">130亿参数开源模型「小羊驼-Vicuna」来了！复刻ChatGPT九成功力，GPT-4亲自监考</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/o51CmLt2JViJ4nsKfBJfwg" target="_blank">重磅！微软推出HuggingGPT：所有HuggingFace的模型都可以被ChatGPT随意调用！</a>
+    |   
   <!-- 4.4 -->
     <a href="https://mp.weixin.qq.com/s/6ZQ3MiaQFOuOUHXXU-pv6w" target="_blank">ChatGPT 类大语言模型为什么会带来“神奇”的涌现能力？</a>
     | 
     <a href="https://mp.weixin.qq.com/s/nTtLFeV-LumdqMj5CKirdQ" target="_blank">阿里版ChatGPT就快来了</a>
     |
     <a href="https://mp.weixin.qq.com/s/2z0LkyC28-Mny5GMeNjXGg" target="_blank">ChatGPT赋能工作岗位预测，让你从容面对职业转型与升级！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/54fId1RPR8iMf397imxjKA" target="_blank">LeCun力荐！哈佛博士分享如何用GPT-4搞科研</a>
     |
   <!-- 4.5 -->
     <a href="https://mp.weixin.qq.com/s/9XL1RgcYrC7XAkdZo8FBnw" target="_blank">非常全面：72页ChatGPT研究框架(2023)ppt（附下载）</a>
@@ -872,7 +902,13 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/uEAlKdpzutOpnPGmg5dOjw" target="_blank">谷歌TPU超算，大模型性能超英伟达，已部署数十台：图灵奖得主新作</a>
     | 
     <a href="https://mp.weixin.qq.com/s/RUj7HZN96Dy9oRAMy8nmAA" target="_blank">Open AI创始人Sam Altman：关于ChatGPT系统设计背后的18个关键思考</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/xSwl5DZYj_kFmJ2fguFBcA" target="_blank">医疗ChatGPT、金融GPT都来啦！“潘多拉的魔盒”已经打开？ </a>
+    |
+    <a href="https://mp.weixin.qq.com/s/yVHKeZqf0MClkpbegz78xQ" target="_blank">ChatGPT的副作用逐渐显现：人逐渐“废柴化”</a>
     | 
+    <a href="https://mp.weixin.qq.com/s/zwHf5Uhd65hwoaaeXF52qg" target="_blank">首个超大规模GAN模型！生成速度比Diffusion快20+倍，0.13秒出图</a>
+    |    
   <!-- 4.6 -->
     <a href="https://mp.weixin.qq.com/s/123NDy4rVlWFZ4wbmgUbhQ" target="_blank">从集异壁理解ChatGPT的成功与局限</a>
     | 
@@ -884,7 +920,23 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/4eULt6oPjUl4Srt3yjqLzg" target="_blank">CV开启大模型时代！谷歌发布220亿参数史上最大ViT，视觉感知力直逼人类</a>
     |
     <a href="https://mp.weixin.qq.com/s/bpwyT0LO8um-7h18yFZv-A" target="_blank">上海人工智能实验室发布「风乌」大模型，全球气象有效预报时间首破10天</a>
-    |                                      
+    |
+  <!-- 4.8 -->
+    <a href="https://mp.weixin.qq.com/s/NH_yp0kWt-NNeCToyr80vA" target="_blank">沉默已久的Bengio发文：赞成暂停超强AI研发，LeCun亲自出镜反对</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/JBA4xxuOpA53RyXM-WkREg" target="_blank">ChatGPT 能自己跑代码了！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/XxErNXTkddlrmqRjknvWQg" target="_blank">GPT-4压根不会编程？有人让它露馅了</a>
+    |
+  <!-- 4.9 -->
+    <a href="https://mp.weixin.qq.com/s/H1RVdH0fmwM0GjfV3uvd4g" target="_blank">GPT-4的"第一次接触"：《AGI的火花》作者的披露演讲万字全文</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/fF8uXP00B9MtehaHE2ld9Q" target="_blank">阿里「通义千问」大战百度「文心一言」15个回合后，GPT4沉默了</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/CBsogVt0OrwxDZyzX3CPjw" target="_blank">吴恩达杨立昆亲自下场开直播：GPT-5不能停！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/JIaG30fcTSi1rTmERXk9ug" target="_blank">基于重排序的新量化方法RPTQ：实现大型语言模型的 3 比特量化</a>
+    |                                         
 </br>
 </br>
 AI论文: 
