--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -345,7 +345,7 @@
     |
     <a href="https://conf.ccf.org.cn/web/html7/HYDT2.html?channelId=8a9e362c84e695e50184e6eff1030000&globalId=m1049400089711349760167023807829" target="_blank">ChinaMM</a>
     |
-    <a href="#" target="_blank">ChinaSoft</a>
+    <a href="http://chinasoft.ccf.org.cn/" target="_blank">ChinaSoft</a>
     |
     <a href="#" target="_blank">ChinaService</a>
     |
@@ -936,7 +936,10 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/CBsogVt0OrwxDZyzX3CPjw" target="_blank">吴恩达杨立昆亲自下场开直播：GPT-5不能停！</a>
     | 
     <a href="https://mp.weixin.qq.com/s/JIaG30fcTSi1rTmERXk9ug" target="_blank">基于重排序的新量化方法RPTQ：实现大型语言模型的 3 比特量化</a>
-    |                                         
+    |
+  <!-- 4.10 -->
+    <a href="https://mp.weixin.qq.com/s/YWX49oQ5yQNiUPGK0xYVyw" target="_blank">阿里版 ChatGPT 官宣！我们用 16 个提问，火速进行了测评……</a>
+    |                                          
 </br>
 </br>
 AI论文: 
@@ -1998,6 +2001,8 @@ AI Big Model:
     <a href="https://mp.weixin.qq.com/s/en-A4IWd7BfKgqqF0qtoBg" target="_blank">太赞了！Python 开发神器Jupyter竟然还有可视化debug功能！</a>
     |
     <a href="https://mp.weixin.qq.com/s/BZmvqOxi5Gb454aiwSrxgA" target="_blank">这篇罕见的符号编程论文，让你在Jupyter Notebook中手绘草图并变成代码</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/I1U_BGCj_BSRNexhRFTm_Q" target="_blank">谷歌大动作！TPU超算系统大升级，全面超越英伟达A100</a>
     |
 <!--   <br /> -->
 
