--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -253,8 +253,8 @@
     |
     <a href="#" target="_blank">CAiSE</a>
     |
-    <a href="https://2023.ieeeicassp.org/welcome-message/" target="_blank">ICASSP</a>
-    |
+<!--     <a href="https://2023.ieeeicassp.org/welcome-message/" target="_blank">ICASSP</a>
+    | -->
 <!-- Service Computing - B-->
     <a href="https://conferences.computer.org/icws/2023/" target="_blank">ICWS</a>
     |
@@ -936,6 +936,8 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/CBsogVt0OrwxDZyzX3CPjw" target="_blank">吴恩达杨立昆亲自下场开直播：GPT-5不能停！</a>
     | 
     <a href="https://mp.weixin.qq.com/s/JIaG30fcTSi1rTmERXk9ug" target="_blank">基于重排序的新量化方法RPTQ：实现大型语言模型的 3 比特量化</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/sBevJE3ms7VGtgrlgPqXRA" target="_blank">吴军博士：ChatGPT不算新技术革命，带不来什么新机会</a>
     |
   <!-- 4.10 -->
     <a href="https://mp.weixin.qq.com/s/YWX49oQ5yQNiUPGK0xYVyw" target="_blank">阿里版 ChatGPT 官宣！我们用 16 个提问，火速进行了测评……</a>
