--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -463,6 +463,8 @@ Big Models:
 </br>    
     <a href="https://mp.weixin.qq.com/s/GcgePhzh_E7XaDkq5ThjDQ" target="_blank">推特炸锅啦！「是否暂停巨型AI实验？」LeCun、吴恩达带头反对</a>
     |
+    <a href="https://mp.weixin.qq.com/s/2nlikrm4rQIAj8REKIp5Cw" target="_blank">为何不能暂停 AI 研发？杨立昆、吴恩达对话实录</a>
+    |
 </br>
 </br>
 ChatGPT: 
@@ -941,7 +943,21 @@ ChatGPT:
     |
   <!-- 4.10 -->
     <a href="https://mp.weixin.qq.com/s/YWX49oQ5yQNiUPGK0xYVyw" target="_blank">阿里版 ChatGPT 官宣！我们用 16 个提问，火速进行了测评……</a>
-    |                                          
+    | 
+    <a href="https://mp.weixin.qq.com/s/6enOkW7pZsMeTpc4SODwSQ" target="_blank">训练ChatGPT的必备资源：语料、模型和代码库完全指南</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/clE3ygVaQVenflAa1q6kyw" target="_blank">微软首次使用GPT-4进行指令微调，新任务零样本性能再提升</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/5rX4vFVZYe24AyV3-BUkKg" target="_blank">HuggingGPT 刚刚开放了demo！在线演示效果惊艳</a>
+    |
+  <!-- 4.11 -->
+    <a href="https://mp.weixin.qq.com/s/auKZjAd-QLQkAK6WRyQTiQ" target="_blank">推特爆火！揭晓大模型的未来何去何从</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/HPzoKNYqtMnOs5PGIh5B2g" target="_blank">Meta「分割一切」超进化版来了！检测、分割、生成一切，狂揽2k星</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/PiU3FQPFqiJlH0eKqMmXLQ" target="_blank">阿里版 Copilot 惊艳亮相，AI 领域正式进入下半场火拼</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/2nlikrm4rQIAj8REKIp5Cw" target="_blank">阿里版 Copilot 惊艳亮相，AI 领域正式进入下半场火拼为何不能暂停 AI 研发？杨立昆、吴恩达对话实录|                                             
 </br>
 </br>
 AI论文: 
