--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -243,7 +243,7 @@
     |
     <a href="https://conf.researchr.org/home/esem-2023" target="_blank">ESEM</a>
     |
-    <a href="" target="_blank">ISSRE</a>
+    <a href="https://issre.github.io/2023/index.html" target="_blank">ISSRE</a>
     |
     <a href="https://conf.researchr.org/home/icsme-2023" target="_blank">ICSME</a>
     |  
@@ -957,7 +957,10 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/PiU3FQPFqiJlH0eKqMmXLQ" target="_blank">阿里版 Copilot 惊艳亮相，AI 领域正式进入下半场火拼</a>
     |
-    <a href="https://mp.weixin.qq.com/s/2nlikrm4rQIAj8REKIp5Cw" target="_blank">阿里版 Copilot 惊艳亮相，AI 领域正式进入下半场火拼为何不能暂停 AI 研发？杨立昆、吴恩达对话实录|                                             
+    <a href="https://mp.weixin.qq.com/s/2nlikrm4rQIAj8REKIp5Cw" target="_blank">阿里版 Copilot 惊艳亮相，AI 领域正式进入下半场火拼为何不能暂停 AI 研发？杨立昆、吴恩达对话实录|
+  <!-- 4.12 -->
+    <a href="https://mp.weixin.qq.com/s/bV1tPc7hNn2z06YOpzyanw" target="_blank">AutoGPT太火了，无需人类插手自主完成任务，GitHub2.7万星</a>
+    |                                             
 </br>
 </br>
 AI论文: 
