--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -858,6 +858,8 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/GcgePhzh_E7XaDkq5ThjDQ" target="_blank">推特炸锅啦！「是否暂停巨型AI实验？」LeCun、吴恩达带头反对</a>
     |
+    <a href="https://mp.weixin.qq.com/s/P-XNmv_WUTxEZ3oa0RL-JQ" target="_blank">ChatGPT与教育的未来</a>
+    |
   <!-- 4.1 -->
     <a href="https://mp.weixin.qq.com/s/z9JOiRHEv1FEkg0BWSw2oA" target="_blank">精彩活动丨“通用人工智能时代的科学研究——机遇与挑战”研讨会顺利召开</a>
     | 
@@ -960,7 +962,50 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/2nlikrm4rQIAj8REKIp5Cw" target="_blank">阿里版 Copilot 惊艳亮相，AI 领域正式进入下半场火拼为何不能暂停 AI 研发？杨立昆、吴恩达对话实录|
   <!-- 4.12 -->
     <a href="https://mp.weixin.qq.com/s/bV1tPc7hNn2z06YOpzyanw" target="_blank">AutoGPT太火了，无需人类插手自主完成任务，GitHub2.7万星</a>
-    |                                             
+    |
+    <a href="https://mp.weixin.qq.com/s/5wxNAebtNFQPdSS62kdKPQ" target="_blank">日本首相会见奥特曼，考虑引入ChatGPT技术</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/B0AW0HiG09zKqY6ukTZcJA" target="_blank">大模型已涌现社会行为，斯坦福爆火论文打造《西部世界》雏形</a>
+    | 
+  <!-- 4.13 -->
+    <a href="https://mp.weixin.qq.com/s/M5yNXykfv82b3ySwVyNaow" target="_blank">ChatGPT时代，图灵测试已死</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/9JiRwMH1mqvjTpEFhXM8sg" target="_blank">他山之石丨意识机器：ChatGPT 能否拥有自我意识？</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/2prgIQ-j8EkdZuuoaXbV6A" target="_blank">重磅！微软开源Deep Speed Chat，人人拥有ChatGPT！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/J6WsJL6VzpPmfsQ0bUgtDg" target="_blank">GitHub 2.7万星！AutoGPT太火了，无需人类插手自主完成任务</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/xoPKmOzjlNZ2qGdcKeGARw" target="_blank">无需强化学习的与人类偏好对齐的语言模型：Wombat袋熊</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/I8R5miVocUjVIW62IrwPww" target="_blank">GPT-5年底上线？初创公司Runway CEO再爆料：OpenAI员工相信GPT-5有望成AGI</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/_9JevS70pRqEmPRbVVM9Vw" target="_blank">世界首款真开源类ChatGPT大模型Dolly 2.0，可随意修改商用</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/EgGLpvOVymZZy8IvbxMLwA" target="_blank">如何利用ChatGPT帮助开展日常科研工作？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/RpqKFKY8ZENNw8JhAAOcbg" target="_blank">谷歌发布Self-Debug方法，让大模型学会自己修bug，一次性生成正确代码</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/rGzNOHJBdIuFpLCQBOKxBg" target="_blank">顶不住了！OpenAI 宣布启动漏洞赏金计划，众包给ChatGPT找bug</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/64j1sO9UoizxORi-A1JmpA" target="_blank">孙凝晖院士：科学发展进入了停滞期，要培养更多敢挑战权威的人才</a>
+    | 
+  <!-- 4.14 -->
+    <a href="https://mp.weixin.qq.com/s/yHLIaPIME2vg-ZgCORFJLQ" target="_blank">亚马逊高调入局ChatGPT大战，发布Titan大模型、AI编程助手全免费，CEO：改变所有体验</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/lkaYrzuSzv522b6fr-e5rw" target="_blank">Wombat：93%ChatGPT性能！无需RLHF就能对齐人类的语言模型</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/ZeKau9til_Lya2NCEXHbiA" target="_blank">又一恐怖技能！卡耐基梅隆大学发布超强智能体，炸翻科研圈</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/psX32gVrpUMxKXA7cUwcEg" target="_blank">微软震撼开源DeepSpeed Chat，一键实现ChatGPT的端到端RLHF训练</a>
+    | 
+  <!-- 4.15 -->
+    <a href="https://mp.weixin.qq.com/s/F0yU5J32d3sN5Y08-rTnYw" target="_blank">GPT-5根本不存在！ChatGPT之父Sam Altman首次公开表态，最新视频流出</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/wUPXC8hGE7YAT2gliR4aMQ" target="_blank">ChatGPT或要推出APP，OpenAI官宣为ChatGPT招募移动端开发工程师</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/-OvYKyAX4nKQBDPXg2hwwg" target="_blank">SEEM：微软基于 CV 大模型新作，分割“瞬息全宇宙”</a>
+    |                                                
 </br>
 </br>
 AI论文: 
@@ -2511,6 +2556,8 @@ NLP/KG Field：
     <a href="https://hongweiw.net/" target="_blank">Hongwei Wang</a>
     |
     <a href="https://yumeng5.github.io/" target="_blank">Yu Meng</a>
+    |
+    <a href="https://xiaotao2.web.illinois.edu/" target="_blank">Xiaotao Gu</a>
     |
  <!-- Department of Computer Science at Illinois Institute of Technology -->
     <a href="http://www.cs.iit.edu/~kshu/" target="_blank">Kai Shu</a>
