--- a/pages/activities.html
+++ b/pages/activities.html
@@ -70,10 +70,10 @@
     <li><strong>Local chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="#"><strong><u><font color="#874e26">CCKS 2024</font></u></strong></a>), Chongqing, China, xx xx-xx, 2024</li>
 
 
-    <li><strong>Publicity chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2023/"><strong><u><font color="#874e26">CCKS 2023</font></u></strong></a>), Haerbing, China, August 3-5, 2023</li>
+    <li><strong>Publicity chair</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="https://sigkg.cn/ccks2023/"><strong><u><font color="#874e26">CCKS 2023</font></u></strong></a>), Shenyang, China, August 24-27, 2023</li>
 
 
-    <li><strong>PC member</strong>, The 22nd China National Conference on Computational Linguistics (<a href="http://cips-cl.org/static/CCL2023/index.html"><strong><u><font color="#874e26">CCL 2023</font></u></strong></a>), Nanchang, China, October 14-16, 2022</li>
+    <li><strong>PC member</strong>, The 22nd China National Conference on Computational Linguistics (<a href="http://cips-cl.org/static/CCL2023/index.html"><strong><u><font color="#874e26">CCL 2023</font></u></strong></a>), Haerbing, China, August 3-5, 2023</li>
 
 
     <li><strong>PC member</strong>, The 7th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="http://www.apweb-waim2023.com/"><strong><u><font color="#874e26">APWeb-WAIM 2023</font></u></strong></a>), Wuhan, China, October 6-8, 2023</li>
@@ -120,6 +120,9 @@
     margin: 30px 0 5px;
     border-left: 5px solid #0084f2;">Reviewer</h3>
 <ul>
+    <li><strong>Invited Reviewer</strong>, The 22nd China National Conference on Computational Linguistics (<a href="http://cips-cl.org/static/CCL2023/index.html"><strong><u><font color="#874e26">CCL 2023</font></u></strong></a>), Haerbing, China, August 3-5, 2023</li>
+
+    
     <li><strong>Invited Reviewer</strong>, The 7th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="http://www.apweb-waim2023.com/"><strong><u><font color="#874e26">APWeb-WAIM 2023</font></u></strong></a>), Wuhan, China, October 6-8, 2023</li>
 
 
