--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -177,6 +177,9 @@
 
 
 <h4>2024</h4>
+<!-- network - A -->
+    <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
+    |
 <!-- semantic web - B-->
     <a href="" target="_blank">EMNLP</a>
     |   
@@ -200,6 +203,7 @@
 
 
 <h4>2023</h4>
+<!-- network - A -->
     <a href="https://infocom2023.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
     |
 <!-- Knowledge engineering - A-->
@@ -456,6 +460,8 @@ Graph Representation:
 通用AI Models: 
 </br>    
     <a href="https://mp.weixin.qq.com/s/dLSmmhOvjZ8MNnz8AtHleQ" target="_blank">一家之言丨像天使也似魔鬼：关于通用人工智能时代科学研究的71个问题</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/vAJ9pNq_WxHkdxseta6m2Q" target="_blank">他山之石丨10张图总结2023年人工智能状况</a>
     |
 </br>
 </br>
@@ -1005,7 +1011,31 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/wUPXC8hGE7YAT2gliR4aMQ" target="_blank">ChatGPT或要推出APP，OpenAI官宣为ChatGPT招募移动端开发工程师</a>
     | 
     <a href="https://mp.weixin.qq.com/s/-OvYKyAX4nKQBDPXg2hwwg" target="_blank">SEEM：微软基于 CV 大模型新作，分割“瞬息全宇宙”</a>
-    |                                                
+    | 
+    <a href="https://mp.weixin.qq.com/s/TPzZjLzLPMI1jefyieV7CQ" target="_blank">制造业「ChatGPT」来了，我们和「奇智孔明」聊了聊</a>
+    |
+  <!-- 4.16 -->
+    <a href="https://mp.weixin.qq.com/s/M-ToNk8SABoP2JG0xLUBxQ" target="_blank">后GPT书：从GPT-3开始，续写Transformer庞大家族系谱</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/WLYmwT1LJ9YGFdW3GRZ55A" target="_blank">GPT-4充当评测老师，效果惊艳，港中文(深圳)开源凤凰、Chimera等大模型</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/lSNMRrmYnajsDQ2wH3_ryw" target="_blank">ChatGPT全球最大开源平替：回复更受欢迎，但中文对话一塌糊涂</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/_xBDB6U2LzjKoBHIUozgrQ" target="_blank">7 Papers & Radios | 爆火论文打造《西部世界》雏形；OpenAI终结扩散模型</a>
+    |
+  <!-- 4.17 -->
+    <a href="https://mp.weixin.qq.com/s/jZdquERKwcvZguBjwT2y5g" target="_blank">高效又稳定的ChatGPT大模型训练技巧总结，让训练事半功倍！</a>
+    |
+  <!-- 4.18 -->
+    <a href="https://mp.weixin.qq.com/s/S2wY8ItR8JcEffr3RTSi-A" target="_blank">由ChatGPT谈谈下一代多模态模型的雏形</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/4Jm2Bpk8c5W3jK8rjv4mWQ" target="_blank">推演语言模型的大小与计算开销</a>
+    |
+  <!-- 4.19 -->
+    <a href="https://mp.weixin.qq.com/s/hPUVled5_uYsebKUbomdxQ" target="_blank">从语言模型到ChatGPT，大模型调教全攻略</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/Ygf2j-rsyLTwZx3FDK6KEQ" target="_blank">Visual Instruction Tuning: 用LLaVA近似多模态GPT-4</a>
+    |                                                    
 </br>
 </br>
 AI论文: 
