--- a/pages/activities.html
+++ b/pages/activities.html
@@ -147,7 +147,7 @@
     <li><strong>Invited Reviewer</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="http://sigkg.cn/ccks2022/"><strong><u><font color="#874e26">CCKS 2022</font></u></strong></a>), Qinhuangdao, China, August 25-28, 2022</li>
 
 
-    <li><strong>Invited Reviewer</strong>, International Conference on Images, Signals, and Computing (<a href="http://icisc-conf.org/"><strong><u><font color="#874e26">ICISC 2023</font></u></strong></a>), Chengdu, China, April 15-17, 2023</li>
+    <li><strong>Invited Reviewer</strong>, The 2023 International Conference on Images, Signals, and Computing (<a href="http://icisc-conf.org/"><strong><u><font color="#874e26">ICISC 2023</font></u></strong></a>), Chengdu, China, April 15-17, 2023</li>
 
 
     <li><strong>Invited Reviewer</strong>, International Conference Advanced Data Mining and Applications (<a href="https://adma2022.uqcloud.net/index.html"><strong><u><font color="#874e26">ADMA 2022</font></u></strong></a>), Brisbane, Australia, 30th November-2nd December, 2022</li>
