--- a/pages/activities.html
+++ b/pages/activities.html
@@ -94,7 +94,7 @@
     <li><strong>PC member</strong>, China Conference on Knowledge Graph and Semantic Computing (<a href="http://sigkg.cn/ccks2022/"><strong><u><font color="#874e26">CCKS 2022</font></u></strong></a>), Qinhuangdao, China, August 25-28, 2022</li>
 
 
-    <li><strong>PC member</strong>, International Conference on Images, Signals, and Computing (<a href="http://icisc-conf.org/"><strong><u><font color="#874e26">ICISC 2023</font></u></strong></a>), Chengdu, China, April 15-17, 2023</li>
+    <li><strong>PC member</strong>, The 2023 International Conference on Images, Signals, and Computing (<a href="http://icisc-conf.org/"><strong><u><font color="#874e26">ICISC 2023</font></u></strong></a>), Chengdu, China, April 15-17, 2023</li>
 
 
     <li><strong>PC member</strong>, International Conference Advanced Data Mining and Applications (<a href="https://adma2022.uqcloud.net/index.html"><strong><u><font color="#874e26">ADMA 2022</font></u></strong></a>), Brisbane, Australia, 30th November-2nd December, 2022</li>
@@ -122,7 +122,7 @@
 <ul>
     <li><strong>Invited Reviewer</strong>, The 22nd China National Conference on Computational Linguistics (<a href="http://cips-cl.org/static/CCL2023/index.html"><strong><u><font color="#874e26">CCL 2023</font></u></strong></a>), Haerbing, China, August 3-5, 2023</li>
 
-    
+
     <li><strong>Invited Reviewer</strong>, The 7th APWeb-WAIM International Joint Conference on Web and Big Data (<a href="http://www.apweb-waim2023.com/"><strong><u><font color="#874e26">APWeb-WAIM 2023</font></u></strong></a>), Wuhan, China, October 6-8, 2023</li>
 
 
