--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -430,6 +430,8 @@
     <a href="https://mp.weixin.qq.com/s/gPcj9bA6iumE-faKhSd2ww" target="_blank">他山之石丨AI认知架构四十年：发展与挑战</a>
     |
     <a href="https://mp.weixin.qq.com/s/V86K4AzGhXYkF67LX7SLJw" target="_blank">以太网之父Bob Metcalfe荣获图灵奖，其同名定律成为互联网经济基石</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/kjuYTreRM3iHWu73GiKRYA" target="_blank">硅谷 NEC 关系图：将中国企业拽进 AI 时代的人</a>
     |               
 </br>
 </br>
@@ -1035,7 +1037,46 @@ ChatGPT:
     <a href="https://mp.weixin.qq.com/s/hPUVled5_uYsebKUbomdxQ" target="_blank">从语言模型到ChatGPT，大模型调教全攻略</a>
     | 
     <a href="https://mp.weixin.qq.com/s/Ygf2j-rsyLTwZx3FDK6KEQ" target="_blank">Visual Instruction Tuning: 用LLaVA近似多模态GPT-4</a>
-    |                                                    
+    |
+  <!-- 4.20 -->
+    <a href="https://mp.weixin.qq.com/s/teMKo3umRVxvhIhe2pKHkA" target="_blank">纽约大学教授建议：ChatGPT时代下，请躺平！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/PZt8pfnmY8B1OUGL1fBbCA" target="_blank">清华发布工具学习框架，让ChatGPT操控地图、股票查询，贾维斯已来？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/DPINyXunx-nPz0a8hUi8CA" target="_blank">张俊林：当前炼制“大语言模型”的两个现象</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/dFwPw0PEktfBnHWqhFjetQ" target="_blank">ChatGPT和GPT-4的逻辑推理如何？浙大等最新《ChatGPT和GPT-4逻辑推理能力全面评测》论文解答，常规优异新数据差</a>
+    |
+  <!-- 4.21 -->
+    <a href="https://mp.weixin.qq.com/s/nKyvSjWykYziHXNulEz2kg" target="_blank">预训练语言模型丨超对称联合知识工场实验室发布并开源120亿参数语言模型BBT-2</a>
+    |
+    <a href="https://www.shobserver.com/staticsg/res/html/web/newsDetail.html?id=604936" target="_blank">复旦MOSS升级版开源上线，能搜索信息、生成图像，还能解数学应用题</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/OpgdSTfx6TSEgTxpddpXaA" target="_blank">ChatGPT 的真相：虚拟人和母体，以及强泛化的秘密</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/wExDcfVgyLDiqjoLY9gdGQ" target="_blank">用ChatGPT和强化学习玩转《我的世界》，Plan4MC攻克24个复杂任务</a>
+    |
+  <!-- 4.22 -->
+    <a href="https://mp.weixin.qq.com/s/LPB4X99pV7KuExWHcBqugA" target="_blank">直连Colab，支持20种编程语言：谷歌版ChatGPT代码水平反杀了？</a>
+    | 
+  <!-- 4.23 -->
+    <a href="https://mp.weixin.qq.com/s/Q_bxec4-kV_1-Q1uNsAYXg" target="_blank">120名顶级技术专家用GPT-4搞出的脑洞发明大赏</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/6HysrMnSwi5V4Tod3yNBEg" target="_blank">Stable Diffusion公司发布首个大语言模型StableLM，已开源公测！</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/zUGr_h5MpsyhZcuAXZGSJg" target="_blank">复旦MOSS大模型开源了！Github和Hugging Face同时上线</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/MKcYUXfN_dLiram_tNyKNg" target="_blank">API-Bank：用于评估LLMs使用外部工具能力的测试基准</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/c3tdqKGVWnWKo8L99K42Sg" target="_blank">熔岩羊驼LLaVA来了：像GPT-4一样可以看图聊天，无需邀请码，在线可玩</a>
+    |
+  <!-- 4.24 -->
+    <a href="https://mp.weixin.qq.com/s/1P0OLS_Y5GogiSgUCysTaQ" target="_blank">GPT-4的多模态能力是如何实现的？</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/l_ujatkX9v16Q_D3Z9fRJA" target="_blank">金融GPT模型登场，彭博BloombergGPT为专业垂直领域大模型提供新范式</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/nYXnbhzCtKOgjZDGlCu9NQ" target="_blank">播客时间：一场关于大语言模型未来方向的发散性探讨 | 超A电波vol.2</a>
+    |                                                                
 </br>
 </br>
 AI论文: 
