--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -180,6 +180,9 @@
 <!-- network - A -->
     <a href="https://infocom2024.ieee-infocom.org/" target="_blank">IEEE INFOCOM</a>
     |
+<!-- software engineering - A-->
+   <a href="https://conf.researchr.org/track/icse-2024/icse-2024-research-track" target="_blank">ICSE</a>
+    |
 <!-- semantic web - B-->
     <a href="" target="_blank">EMNLP</a>
     |   
@@ -198,6 +201,25 @@
     <a href="" target="_blank">ECIR</a>
     |
     <a href="" target="_blank">UIC</a>
+    |
+<!-- software engineering - B-->
+    <a href="" target="_blank">DASFAA</a>
+    |
+    <a href="" target="_blank">ETAPS</a>
+    |
+    <a href="https://conf.researchr.org/home/saner-2024" target="_blank">SANER</a>
+    |
+    <a href="" target="_blank">ESEM</a>
+    |
+    <a href="" target="_blank">ISSRE</a>
+    |
+    <a href="" target="_blank">ICSME</a>
+    |  
+    <a href="" target="_blank">ICPC</a>
+    |
+    <a href="#" target="_blank">RE</a>
+    |
+    <a href="#" target="_blank">CAiSE</a>
     |
     <br/>
 
@@ -1070,12 +1092,38 @@ ChatGPT:
     |
     <a href="https://mp.weixin.qq.com/s/c3tdqKGVWnWKo8L99K42Sg" target="_blank">熔岩羊驼LLaVA来了：像GPT-4一样可以看图聊天，无需邀请码，在线可玩</a>
     |
+    <a href="https://mp.weixin.qq.com/s/_ZvyxRpgIA4L4pqfcQtPTQ" target="_blank">陆奇最新演讲实录：我的大模型世界观</a>
+    |
   <!-- 4.24 -->
     <a href="https://mp.weixin.qq.com/s/1P0OLS_Y5GogiSgUCysTaQ" target="_blank">GPT-4的多模态能力是如何实现的？</a>
     |
     <a href="https://mp.weixin.qq.com/s/l_ujatkX9v16Q_D3Z9fRJA" target="_blank">金融GPT模型登场，彭博BloombergGPT为专业垂直领域大模型提供新范式</a>
     |
     <a href="https://mp.weixin.qq.com/s/nYXnbhzCtKOgjZDGlCu9NQ" target="_blank">播客时间：一场关于大语言模型未来方向的发散性探讨 | 超A电波vol.2</a>
+    |     
+    <a href="https://mp.weixin.qq.com/s/rS5i3prVKqFDA62qpj3UPg" target="_blank">OpenAI官方的AutoGPT要来了！实测效果很优秀</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/-N1Op8Gm1rdzjNNaLQm8rA" target="_blank">阿里最新研究：当ChatGPT 遇上推荐系统，遭遇滑铁卢</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/83PQsumqjecY7B0Rh2brag" target="_blank">斯坦福| ChatGPT用于生成式搜索引擎的可行性</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/arEEAm05i_9Lij4HnxJbEw" target="_blank">大模型工具学习系统性综述+开源工具平台，清华、人大、北邮、UIUC、NYU、CMU等40多位研究者联合发布</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/6a-wr_FqigwExvUK28s2qg" target="_blank">圣塔菲学者：AI 大语言模型真的理解人类语言吗？</a>
+    |
+  <!-- 4.25 -->
+    <a href="https://mp.weixin.qq.com/s/Bq-118Ocz_WwtyBcxH1NPA" target="_blank">太酷啦，Transformer 的有效上下文长度可扩展至百万级</a>
+    |
+    <a href="https://mp.weixin.qq.com/s/-rdpARxhgDGq9NFFpJOVTQ" target="_blank">AutoGPT star量破10万，这是首篇系统介绍自主智能体的文章</a>
+    |  
+    <a href="https://mp.weixin.qq.com/s/F0cshYGpYfF8cAbsrR0ZRQ" target="_blank">真·量子速读：突破GPT-4一次只能理解50页文本限制，新研究扩展到百万token</a>
+    |
+  <!-- 4.26 -->
+    <a href="https://mp.weixin.qq.com/s/uESytlnKnwsIA0JtrfiTyA" target="_blank">大模型跨界研究：计算精神病学发现，大模型居然比人类更焦虑</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/Suk3iCl2cbBxJtvuVi_2KQ" target="_blank">离视觉大一统更近一步，Meta又开源一组多用途大模型！</a>
+    | 
+    <a href="https://mp.weixin.qq.com/s/jObP_dY1M60Z3NmuMbLX7w" target="_blank">GPT之父谈未来五年的AI：模型规模见顶，下个突破点在用好AI涌现特质</a>
     |                                                                
 </br>
 </br>
