--- a/pages/top-paper.html
+++ b/pages/top-paper.html
@@ -469,6 +469,12 @@ Graph Representation:
     |
 </br>
 </br>
+Knowledge Graphs: 
+</br>    
+    <a href="https://mp.weixin.qq.com/s/kqnqO7DiWLKXj3AcKg-BuQ" target="_blank">知识就是AI的力量：从知识工程到知识图谱全面回顾</a>
+    |
+</br>
+</br>
 懂理性的AI Models: 
 </br>    
     <a href="https://mp.weixin.qq.com/s/S77fj9loSKFhHcAiWgxKrg" target="_blank">2023将至，Bengio等大佬年度展望！懂理性的AI模型要来了？</a>
@@ -1118,13 +1124,17 @@ ChatGPT:
     |  
     <a href="https://mp.weixin.qq.com/s/F0cshYGpYfF8cAbsrR0ZRQ" target="_blank">真·量子速读：突破GPT-4一次只能理解50页文本限制，新研究扩展到百万token</a>
     |
+    <a href="https://mp.weixin.qq.com/s/ShQnYk8tvTkkDic52O6XJA" target="_blank">ChatGPT VS Claude： 以Review MLIR Codegen代码为例</a>
+    |
   <!-- 4.26 -->
     <a href="https://mp.weixin.qq.com/s/uESytlnKnwsIA0JtrfiTyA" target="_blank">大模型跨界研究：计算精神病学发现，大模型居然比人类更焦虑</a>
     | 
     <a href="https://mp.weixin.qq.com/s/Suk3iCl2cbBxJtvuVi_2KQ" target="_blank">离视觉大一统更近一步，Meta又开源一组多用途大模型！</a>
     | 
     <a href="https://mp.weixin.qq.com/s/jObP_dY1M60Z3NmuMbLX7w" target="_blank">GPT之父谈未来五年的AI：模型规模见顶，下个突破点在用好AI涌现特质</a>
-    |                                                                
+    | 
+    <a href="https://mp.weixin.qq.com/s/DsCZ5jG4fndIYLhpskUXyA" target="_blank">大语言模型时代的知识工程 | TF97回顾</a>
+    |                                                                 
 </br>
 </br>
 AI论文: 
